--- a/gb/23/1/29/n13917779.md
+++ b/gb/23/1/29/n13917779.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>华府一天两场爆满 神韵倾倒艺术界名流</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>华府一天两场爆满 艺术界名流为神韵倾倒</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13917781-2301290239201160-600x400.jpg" />
 <h6>2023年1月28日，神韵纽约艺术团在华盛顿特区肯尼迪艺术中心歌剧院的两场演出皆爆满。华府艺术界名流为神韵所倾倒。（李莎／大纪元）
 </h6>
@@ -9,13 +9,13 @@
 	<p>【大纪元2023年01月29日讯】（大纪元美国华盛顿DC记者站报导）1月28日，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BF%E7%89%B9%E5%8C%BA%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">华盛顿特区肯尼迪艺术中心歌剧院</a>（The Kennedy Center Opera House）上演了两场演出，皆大爆满。神韵展现中华五千年的璀璨文明，以及神韵艺术家的精湛技艺，令华府艺术界名流为之倾倒，心生感佩。</p>
 <p>知名电影制作人Jaosn Jones盛赞<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>“令人叹为观止”。华盛顿芭蕾舞团演员吴杰修和Abigail Brent惊叹于神韵<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88%E6%BC%94%E5%91%98.md#1">舞蹈演员</a>的技艺“超凡脱俗”，吴杰修说令他“自惭形秽”。音乐家John Locke和家人称赞神韵是“寓意超凡的艺术庆典”。专业舞蹈家、舞团创办人Elena Indrokova Jones赞扬神韵艺术家“出类拔萃”。</p>
 <h2>知名电影制作人：神韵恢复传统 意义非凡</h2>
-<figure id="attachment_13917787" aria-describedby="caption-attachment-13917787" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13917787-2301282340591528.jpg"><img class="size-large wp-image-13917787" title="" src="https://i.epochtimes.com/assets/uploads/2023/01/id13917787-2301282340591528-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-13917787" class="wp-caption-text">2023年1月28日晚，知名电影制作人、人权活动家Jaosn Jones带两个女儿一起观看神韵纽约艺术团在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BF%E7%89%B9%E5%8C%BA%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">华盛顿特区肯尼迪艺术中心歌剧院</a>的第六场演出。（吴芮芮／大纪元）</figcaption></figure>
+<figure id="attachment_13917955" aria-describedby="caption-attachment-13917955" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13917955-2301290910181160.jpg"><img class="size-large wp-image-13917955" title="" src="https://i.epochtimes.com/assets/uploads/2023/01/id13917955-2301290910181160-600x380.jpg" alt="" width="600" b="380" /></a><figcaption id="caption-attachment-13917955" class="wp-caption-text">2023年1月28日晚，知名电影制作人、人权活动家Jaosn Jones带两个女儿一起观看神韵纽约艺术团在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BF%E7%89%B9%E5%8C%BA%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">华盛顿特区肯尼迪艺术中心歌剧院</a>的第六场演出。（吴芮芮／大纪元）</figcaption></figure>
 <p>知名电影制作人Jaosn Jones带两个女儿观看神韵演出。他赞叹：“（演出）令人叹为观止，非常神奇。我非常感恩。我的女儿们有一半中国血统，我非常感恩她们能有机会来看演出。”</p>
 <p>了解到神韵的使命是恢复被共产主义破坏的传统文化，Jones心生敬意。“中国在共产主义之前就存在，在共产主义之后更会生生不息。而中共摇摇欲坠，很快就会垮台。随后真正（恢复传统）的工作也会开始，要恢复在中共建政后在数十年文化浩劫中所失去的一切，在这期间试图被抹掉的所有历史，真正来自西方的邪恶意识形态（共产主义）在过去数十年一直在毒害扭曲着这个伟大而古老的文明。”</p>
 <p>Jones还感悟到，演出揭示了生命的意义，给人带来深思：“我最喜欢的部分是，无神论和进化论的邪恶被曝光的时刻。”Jones说，“那一刻非常令人欣慰，因为这是真正重建人性中无可比拟的尊严和美德，宇宙中没有什么比人的生命更玄妙。这就是通过所有节目要表达的信息。”</p>
 <p>Jones介绍，他太太是一名模特，来自中国演艺世家。他说：“我想让她们（女儿）看到，这是她们的文化。我希望她们了解并为她们的文化感到自豪，更希望她们成为这伟大文化的承传者。如果我们忘记先祖，也会忽视我们的后代。我希望我的孩子们能记住她们先祖的教诲，为后世着想，不仅是为我的后代，更是为她们的后代。”</p>
-<p>Jones说，“鲁智深的故事是我的最爱之一，还有第一个节目下世救众生的故事。”他表示，“演出带给我很多启发，也让我看到历史被承传的希望，传统文化价值就在这里，在我们的国家首都被承传和分享。”</p>
-<p>Jones不仅是电影制片人，也是作家和人权活动家。他是2006年电影《贝拉》（Bella）的执行制片人，该片赢得多个电影业奖项。他也是2008年电影《索拉娅-M的石刑》（The Stoning of Soraya M）的副制片人，该片赢得有色人种协进会形象奖以及洛杉矶电影节观众奖。他是“从电影到运动（Movie to Movement）”、“弱势人群项目（Vulnerable People Project）”和人权教育组织（H.E.R.O.）的总裁。他在2014年出版了他的第一本书《拯救我们的世纪的竞赛》（The Race to Save Our Century），也是广播节目《杰森-琼斯秀》（Jason Jones Show）的主持人，《溪流》（The Stream）的经常撰稿人。</p>
+<p>Jones说，“鲁智深的故事是我的最爱之一，还有第一个节目《下世救众生》的故事。”他表示，“演出带给我很多启发，也让我看到历史被承传的希望，传统文化价值就在这里，在我们的国家首都被承传和分享。”</p>
+<p>Jones不仅是电影制片人，也是作家和人权活动家。他是2006年电影《贝拉》（Bella）的执行制片人，该片赢得多个电影业奖项。他也是2008年电影《索拉娅-M的石刑》（The Stoning of Soraya M）的副制片人，该片赢得有色人种协进会形象奖以及洛杉矶电影节观众奖。他是“从电影到运动（Movie to Movement）”“弱势人群项目（Vulnerable People Project）”和人权教育组织（H.E.R.O.）的总裁。他在2014年出版了他的第一本书《拯救我们的世纪的竞赛》（The Race to Save Our Century），也是广播节目《杰森-琼斯秀》（Jason Jones Show）的主持人，《溪流》（The Stream）的经常撰稿人。</p>
 <h2>华盛顿芭蕾舞团演员：神韵<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88%E6%BC%94%E5%91%98.md#1">舞蹈演员</a>的技巧让我自惭形秽</h2>
 <figure id="attachment_13917788" aria-describedby="caption-attachment-13917788" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13917788-2301290013192153.jpg"><img class="size-large wp-image-13917788" title="" src="https://i.epochtimes.com/assets/uploads/2023/01/id13917788-2301290013192153-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13917788" class="wp-caption-text">2023年1月28日晚，华盛顿芭蕾舞团演员吴杰修和Abigail Brent结伴观赏神韵纽约艺术团在美国华盛顿特区的演出，他们为神韵舞蹈演员的高超技巧所折服。（亦平／大纪元）</figcaption></figure>
 <p>1月28日晚，华盛顿芭蕾舞团的舞蹈演员吴杰修和Abigail Brent结伴观看神韵演出。</p>
@@ -24,7 +24,7 @@
 <p>Brent则是第一次观赏神韵，“我非常喜欢，她是如此优美动人。”</p>
 <p>Brent说，从舞蹈的技术层面来说，神韵舞蹈演员的技艺“令人惊叹”，“他们的技术技巧绝佳，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%8F%A4%E5%85%B8%E8%88%9E.md#1">中国古典舞</a>被他们演绎得非常非常漂亮。他们的舞动是如此精确，整齐划一，就像一个人一样，这真是太神奇了。”</p>
 <p>吴杰修表示，作为专业受训多年的舞蹈演员，对于那些高难度动作，他了解每一个动作和技巧，但是神韵舞蹈演员的技术高超到令他叹为观止。</p>
-<p>“所有的翻转，所有的跳跃，我熟知这些动作，我知道接下来他们会做什么，但是他们的技巧还是让我有点自惭形秽。”他以女子古典舞举例说，“那个集体舞蹈很难，并不像看起来的那么容易，非常有难度。女孩们只有一条腿站在地上，你可以从这个动作看出她们的技术水准，非常高难度。”</p>
+<p>“所有的翻转，所有的跳跃，我熟知这些动作，我知道接下来他们会做什么，但是他们的技巧还是让我有点自惭形秽。”他以《女子古典舞》举例说，“那个集体舞蹈很难，并不像看起来的那么容易，非常有难度。女孩们只有一条腿站在地上，你可以从这个动作看出她们的技术水准，非常高难度。”</p>
 <p>Brent接着说，“她们必须非常精确，即使是在舞动过程中，也保持非常精准，对于那些不跳舞的人，可能不会意识到这多么具有挑战性，但这背后的技术确实令人印象深刻。她们必须在舞动的同时做到精准无误。”</p>
 <p>除赞叹神韵舞蹈演员掌握的高难度技巧之外，吴杰修和Brent还感受到他们传递出的能量。</p>
 <p>Brent说，“神韵所有的舞蹈演员都是一样，他们都给观众带来能量。”</p>
@@ -32,11 +32,11 @@
 <p>Brent接着说，“对于那些不知道故事的人来说，他们（舞蹈演员）很好地演绎了这个故事，并将故事传递给观众，因为他们的舞蹈和演技结合得非常成功，他们很好地传达了他们的信息。”</p>
 <p>吴杰修说，神韵舞蹈演员跳的“毯子功、蒙古舞、藏族舞等，都非常有难度。”他说，“我今天看到（神韵舞蹈）感到浑身一震，因为我感到我喜欢的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%8F%A4%E5%85%B8%E8%88%9E.md#1">中国古典舞</a>又回来了。”</p>
 <h2>音乐家全家观神韵 盛赞寓意超凡的艺术庆典</h2>
-<figure id="attachment_13917793" aria-describedby="caption-attachment-13917793" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13917793-2301290013582153.jpg"><img class="size-large wp-image-13917793" title="" src="https://i.epochtimes.com/assets/uploads/2023/01/id13917793-2301290013582153-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13917793" class="wp-caption-text">2023年1月28日晚，音乐家John Locke先生和身为钢琴家的太太Kathryn Locke、医学博士生的儿子John Edgar Locke，全家人一起观看神韵纽约艺术团在华盛顿特区肯尼迪艺术中心歌剧院的精彩演出。（亦平／大纪元）</figcaption></figure>
+<figure id="attachment_13918006" aria-describedby="caption-attachment-13918006" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13918006-2301291147271160.jpg"><img class="size-large wp-image-13918006" title="" src="https://i.epochtimes.com/assets/uploads/2023/01/id13918006-2301291147271160-600x390.jpg" alt="" width="600" b="390" /></a><figcaption id="caption-attachment-13918006" class="wp-caption-text">2023年1月28日晚，音乐家John Locke先生和身为钢琴家的太太Kathryn Locke，医学博士生儿子John Edgar Locke全家人一起观看了神韵纽约艺术团 在华盛顿特区 肯尼迪艺术中心歌剧院的精彩演出。（亦平／大纪元）</figcaption></figure>
 <p>音乐家John Locke先生携全家三口观看了28日晚的神韵演出。</p>
 <p>“神韵是对五千年神传文化遗产的不可思议的庆典，她是如此令人印象深刻，如此崇高的追求来完善如此美妙的艺术形式。”医学博士生John Edgar Locke表达了他内心深处的感受，“神韵演出是对所有艺术形式的庆典，（包括）舞蹈、音乐、诗歌、哲学和宗教，跨越政治和文化界限，真正将人类维系在一起。我认为这才是今晚真正被庆典的，这是如此鼓舞人心。这是非常令人难以置信、打动人心的演出。”</p>
 <p>音乐家John Locke先生在巴尔的摩交响乐团担任打击乐手已有30年，曾担任巴尔的摩歌剧院的首席。目前在巴尔的摩艺术学院、皮博迪学院和古彻学院任教。钢琴家Kathryn Locke女士是哈福德合唱协会的音乐总监，目前在马里兰州的几所大学任教。</p>
-<p>“我发现神韵包含三个绝对美丽和快乐的元素（真、善、忍），她是如此振奋人心，她深邃的精神内涵，是超然物外的。”Locke赞叹道，“这种体验令我惊讶，正是超越专业的整体灵性和令人难以置信的高水平演出，令人印象深刻。”“除此之外，神韵艺术家们也有一些神奇的灵性，我真的很欣赏这一点。”“明年我们还会来看神韵。”</p>
+<p>“我发现神韵包含三个绝对美丽和快乐的元素（‘真、善、忍’），她是如此振奋人心，她深邃的精神内涵，是超然物外的。”Locke赞叹道，“这种体验令我惊讶，正是超越专业的整体灵性和令人难以置信的高水平演出，令人印象深刻。”“除此之外，神韵艺术家们也有一些神奇的灵性，我真的很欣赏这一点。”“明年我们还会来看神韵。”</p>
 <p>神韵音乐带给Locke妙不可言的体会，“她很高雅，音乐家也很出色，神韵音乐真的会把你带到另外的空间，她很华美，也变化多样。她会将您带回到中国的某些地方去（神游）。”</p>
 <p>他紧接着说，神韵演出的动态天幕让他大开眼界，“动态天幕与现场表演配合得天衣无缝，仅从技术角度来看，这简直令人印象深刻。”</p>
 <p>Kathryn认为，“从音乐家角度看，神韵舞蹈家和音乐家的表演水平令人叹为观止。”</p>
@@ -50,6 +50,7 @@
 <p>除中国古典舞的技巧外，来自神传文化的手工服饰也让Jones心醉：“服饰很美，非常有意思，色彩非常绚丽。”</p>
 <p>她赞叹，“（神韵是）很棒的舞蹈公司！”</p>
 <p>Jones最后表示，神韵演出给她带来灵感。她诙谐地说：“我喜欢长袖、（天幕中的）山川、河流等，我想或许我会‘偷’点东西。”</p>
+<figure id="attachment_13917956" aria-describedby="caption-attachment-13917956" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13917956-2301290158381160.jpg"><img class="size-large wp-image-13917956" title="" src="https://i.epochtimes.com/assets/uploads/2023/01/id13917956-2301290158381160-600x356.jpg" alt="" width="600" b="356" /></a><figcaption id="caption-attachment-13917956" class="wp-caption-text">2023年1月28日晚，神韵纽约艺术团在华盛顿DC肯尼迪艺术中心歌剧院的第六场在观众的热烈掌声中圆满落幕。（李莎／大纪元）</figcaption></figure>
 <p>责任编辑：林蓁</p>
 	
 <hr>
@@ -66,33 +67,33 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/21/n9756258.md#1" target="_blank">柬埔寨女儿的记忆：《他们先杀了我父亲》</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/4/n10890780.md#1" target="_blank">天空出现“真善忍” 西澳女子圆梦</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/25/n10590053.md#1" target="_blank">烧杀抢如何成为中共土地革命的“初心”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/15/n2263295.md#1" target="_blank">调查报告：法轮功与健康</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914722.md#1">濒死女子见到前世与未来景象 了解人生目的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906660.md#1">悟空为何能得“长生”之法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916753.md#1">目睹仓鼠死亡时灵魂上升 英女人生从此改观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890743.md#1">【百年真相】株连六万人 小说成中共内斗“杀器”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910496.md#1">学会放下，幸福就来了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917540.md#1">【舞蹈三剑客】神韵艺术家们演出幕后大公开！原来是这样准备</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917131.md#1">【全球新闻】一国两制破产 王沪宁要编对台新论</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916244.md#1">王沪宁接受统战台湾新任务 被指注定失败</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916408.md#1">辽宁铁岭天空出现三个太阳异象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916564.md#1">见证南京疫情死亡高峰 市民：简直是场谋杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916993.md#1">金钟视帝丁强惊传初六骤世 经纪人证实</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916305.md#1">周星驰晒写春联视频 贾静雯率先抽中墨宝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916107.md#1">妻怀上二胎 杨祐宁晒超音波照分享喜讯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917383.md#1">因挺白纸革命？女星春夏遭春晚和新片双除名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916063.md#1">柯佳嬿与许光汉、施柏宇访韩 宣传《想见你》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915759.md#1">传染病专家：中共两大官方新冠数据矛盾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13910160.md#1">每天喝2杯咖啡会增加死亡风险吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915841.md#1">地中海饮食：六度蝉联最佳饮食方式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915918.md#1">如何找到最佳就寝时间？ 专家提供诀窍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901656.md#1">50岁前退休可能吗？教你9招做好退休准备</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/29/n13917779.htm">华府一天两场爆满 神韵倾倒艺术界名流</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/29/n13917779.htm">华府一天两场爆满 艺术界名流为神韵倾倒</a></p><hr>
 
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917779.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
