--- a/gb/23/2/4/n13922642.md
+++ b/gb/23/2/4/n13922642.md
@@ -35,31 +35,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10747311.md#1" target="_blank">裴毅然：中共抗战“游而不击”的史证（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/20/n7912178.md#1" target="_blank">前军士长：四代早逝的厄运到我而止</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/30/n11622063.md#1" target="_blank">林辉：中共对赵州桥的破坏令人叹惋</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/4/n11569061.md#1" target="_blank">法轮功学员受邀在美智库演讲 感动华府听众</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951783.md#1">挣脱监控 新西兰中领馆出逃员工心路历程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947935.md#1">才能出众护国大将军 因一句话遭现世报而绝嗣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950328.md#1">【未解之谜】消失的《小人国》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945639.md#1">【经典小说选登】老门生三世报恩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952758.md#1">【未解之谜】别找了 外星人早来地球了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953269.md#1">【财商天下】全球银行连环爆 瑞士信贷再崩盘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952618.md#1">【环球直击】TikTok安全隐患风波 新西兰议会禁用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950100.md#1">习近平连任后确定访俄 专家析背后原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952140.md#1">习近平是个好领导吗？中国AI机器人不敢答</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13951986.md#1">【新唐人大视野】李强如何上位？党媒发文泄密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951916.md#1">60岁许效舜考上博士班 自曝被教授一句话吓傻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951954.md#1">离婚一年半晒与汪涵合照 欧弟暴瘦引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952639.md#1">杨紫琼封后被说华人之光 黄秋生质疑用词获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951896.md#1">香港导演会颁奖 郑秀文凭《流水落花》再封后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951720.md#1">杨烈夺歌王曾陷低潮 赴日观素人演出找回动力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951529.md#1">如何强化记忆力？ 世界纪录保持人教你几招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950060.md#1">抗炎抗氧化 便宜又好吃的9种超级食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952064.md#1">银行接连倒 美国房市会不会崩？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952146.md#1">心理医师：四种自然方法缓解紧张焦虑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950859.md#1">知道10个技巧 轻松煮出美味砂锅菜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/4/n13922642.htm">国家交响乐团指挥：神韵绝对是极品中的极品</a></p><hr>
